--- a/src/Resources/DataDictionary.resx
+++ b/src/Resources/DataDictionary.resx
@@ -612,4 +612,10 @@
   <data name="DisplayInHomePage" xml:space="preserve">
     <value>Display in Home Page</value>
   </data>
+  <data name="Prefix" xml:space="preserve">
+    <value>Prefix</value>
+  </data>
+  <data name="Genders" xml:space="preserve">
+    <value>Genders</value>
+  </data>
 </root>
