--- a/src/Resources/DataDictionary.fa-IR.resx
+++ b/src/Resources/DataDictionary.fa-IR.resx
@@ -651,4 +651,7 @@
   <data name="Genders" xml:space="preserve">
     <value>جنسیت‌ها</value>
   </data>
+  <data name="Watch" xml:space="preserve">
+    <value>نمایش</value>
+  </data>
 </root>
