--- a/src/Resources/DataDictionary.fa-IR.resx
+++ b/src/Resources/DataDictionary.fa-IR.resx
@@ -654,4 +654,7 @@
   <data name="Watch" xml:space="preserve">
     <value>نمایش</value>
   </data>
+  <data name="IsTestData" xml:space="preserve">
+    <value>داده تستی</value>
+  </data>
 </root>
