--- a/src/Resources/DataDictionary.fa-IR.resx
+++ b/src/Resources/DataDictionary.fa-IR.resx
@@ -663,4 +663,16 @@
   <data name="Slide" xml:space="preserve">
     <value>اسلاید</value>
   </data>
+  <data name="CellPhoneNumberInBrief" xml:space="preserve">
+    <value>موبایل</value>
+  </data>
+  <data name="EmailAddressInBrief" xml:space="preserve">
+    <value>ایمیل</value>
+  </data>
+  <data name="IsDeletedInBrief" xml:space="preserve">
+    <value>حذف</value>
+  </data>
+  <data name="IsVerifiedInBrief" xml:space="preserve">
+    <value>تایید</value>
+  </data>
 </root>
