--- a/src/Resources/DataDictionary.fa-IR.resx
+++ b/src/Resources/DataDictionary.fa-IR.resx
@@ -681,4 +681,13 @@
   <data name="DeleteTestData" xml:space="preserve">
     <value>حذف اطلاعات تستی</value>
   </data>
+  <data name="ConfirmNewPassword" xml:space="preserve">
+    <value>تکرار گذرواژه جدید</value>
+  </data>
+  <data name="CurrentPassword" xml:space="preserve">
+    <value>گذرواژه جاری</value>
+  </data>
+  <data name="NewPassword" xml:space="preserve">
+    <value>گذرواژه جدید</value>
+  </data>
 </root>
