--- a/src/Resources/Messages/Successes.resx
+++ b/src/Resources/Messages/Successes.resx
@@ -123,6 +123,9 @@
   <data name="Deleted" xml:space="preserve">
     <value>The {0} successfully deleted.</value>
   </data>
+  <data name="PasswordChanged" xml:space="preserve">
+    <value>Your password has been changed successfully.</value>
+  </data>
   <data name="RegistrationDone" xml:space="preserve">
     <value>Your Registration Done.</value>
   </data>
