--- a/src/Resources/PageTitles.fa-IR.resx
+++ b/src/Resources/PageTitles.fa-IR.resx
@@ -174,6 +174,9 @@
   <data name="FileManager" xml:space="preserve">
     <value>مدیریت فایل</value>
   </data>
+  <data name="Files" xml:space="preserve">
+    <value>فایل‌ها</value>
+  </data>
   <data name="Index" xml:space="preserve">
     <value>صفحه نخست</value>
   </data>
