--- a/src/Resources/PageTitles.resx
+++ b/src/Resources/PageTitles.resx
@@ -174,6 +174,9 @@
   <data name="FileManager" xml:space="preserve">
     <value>File Manager</value>
   </data>
+  <data name="Files" xml:space="preserve">
+    <value>Files</value>
+  </data>
   <data name="Index" xml:space="preserve">
     <value>Home</value>
   </data>
