--- a/src/Resources/DataDictionary.fa-IR.resx
+++ b/src/Resources/DataDictionary.fa-IR.resx
@@ -370,7 +370,7 @@
     <value>مدیریت نقش ها</value>
   </data>
   <data name="Roles" xml:space="preserve">
-    <value>نقش ها</value>
+    <value>نقش‌ها</value>
   </data>
   <data name="Search" xml:space="preserve">
     <value>جستجو</value>
