--- a/src/Resources/DataDictionary.fa-IR.resx
+++ b/src/Resources/DataDictionary.fa-IR.resx
@@ -699,4 +699,10 @@
   <data name="UpdateProfileDateTime" xml:space="preserve">
     <value>زمان ویرایش مشخصات</value>
   </data>
+  <data name="Data" xml:space="preserve">
+    <value>Data</value>
+  </data>
+  <data name="LocalizedApplicationSetting" xml:space="preserve">
+    <value>تنظیمات سامانه برحسب زبان</value>
+  </data>
 </root>
