--- a/src/Resources/Messages/Successes.fa-IR.resx
+++ b/src/Resources/Messages/Successes.fa-IR.resx
@@ -138,4 +138,7 @@
   <data name="UpdateProfile" xml:space="preserve">
     <value>اطلاعات شما با موفقیت ذخیره گردید.</value>
   </data>
+  <data name="YourEmailAddressVerified" xml:space="preserve">
+    <value>نشانی پست الکترونیکی شما تایید گردید.</value>
+  </data>
 </root>
