--- a/src/Resources/DataDictionary.resx
+++ b/src/Resources/DataDictionary.resx
@@ -724,9 +724,15 @@
     <value>Max Post Count in Main Page</value>
   </data>
   <data name="PostType" xml:space="preserve">
-    <value>Type</value>
+    <value>Post Type</value>
   </data>
   <data name="PostTypes" xml:space="preserve">
+    <value>Post Types</value>
+  </data>
+  <data name="Type" xml:space="preserve">
+    <value>Type</value>
+  </data>
+  <data name="Types" xml:space="preserve">
     <value>Types</value>
   </data>
 </root>
