--- a/src/Resources/ButtonCaptions.resx
+++ b/src/Resources/ButtonCaptions.resx
@@ -177,6 +177,9 @@
   <data name="Save" xml:space="preserve">
     <value>Save</value>
   </data>
+  <data name="Send" xml:space="preserve">
+    <value>Send</value>
+  </data>
   <data name="SendAgainEmailAddressVerificationKey" xml:space="preserve">
     <value>Send Again Email Address Verification Key</value>
   </data>
